--- a/politica.html
+++ b/politica.html
@@ -137,8 +137,9 @@
 <p>We will let You know via email and/or a prominent notice on Our Service, prior to the change becoming effective and update the &quot;Last updated&quot; date at the top of this Privacy Policy.</p>
 <p>You are advised to review this Privacy Policy periodically for any changes. Changes to this Privacy Policy are effective when they are posted on this page.</p>
 <h2>Contact Us</h2>
-<p><strong>Disclaimer:</strong> This application is independent and is not affiliated with or endorsed by any government agency in Peru. All vehicle data displayed is retrieved from public sources provided by official platforms such as MTC, SAT, and others.</p>
 <p>If you have any questions about this Privacy Policy, You can contact us:</p>
 <ul>
 <li>By email: contacto.dgin@gmail.com</li>
 </ul>
+<p><strong>Disclaimer:</strong> This application is not affiliated with or endorsed by any government entity in Peru. All data is retrieved from publicly available official sources.</p>
+
