--- a/politica-es.html
+++ b/politica-es.html
@@ -1,5 +1,8 @@
 <h1>Política de Privacidad</h1>
-<p>Última actualización: 04 de junio de 2025</p>
+<p>Última actualización: 08 de junio de 2025</p>
+<div style="background-color: #fff3cd; color: #856404; padding: 12px; border: 1px solid #ffeeba; margin-bottom: 20px; font-size: 14px;">
+  ⚠️ Atención: esta aplicación <em>no representa</em>, <em>no está afiliada</em> y <em>no ha sido autorizada</em> por SUNARP, MTC, SAT ni ninguna otra entidad pública peruana. La información consultada se obtiene de portales oficiales de acceso público.
+</div>
 <p>Esta Política de Privacidad describe nuestras políticas y procedimientos sobre la recopilación, uso y divulgación de su información cuando utiliza el Servicio, y le informa sobre sus derechos de privacidad y cómo la ley lo protege.</p>
 <p>Utilizamos sus datos personales para proporcionar y mejorar el Servicio. Al utilizar el Servicio, usted acepta la recopilación y el uso de información de acuerdo con esta Política de Privacidad. Esta Política de Privacidad ha sido creada con la ayuda de <a href="https://www.privacypolicies.com/privacy-policy-generator/" target="_blank">Privacy Policy Generator</a>.</p>
 <h2>Interpretación y Definiciones</h2>
@@ -44,6 +47,7 @@
 </ul>
 <h2>Recopilación y Uso de Sus Datos Personales</h2>
 <h3>Información Recopilada mediante el Ingreso de Placa</h3>
+<p>La aplicación D’GIN no recopila, almacena ni procesa información personal como nombres, DNI o direcciones. Solo se permite ingresar un número de placa vehicular para consultar datos públicos ya disponibles en portales oficiales.</p>
 <p>Nuestra Aplicación permite a los usuarios ingresar el número de placa de un vehículo para recuperar información disponible públicamente desde sitios web oficiales. Estos datos se procesan en tiempo real y no se almacenan, conservan ni comparten de ninguna forma.</p>
 <h3>Tipos de Datos Recopilados</h3>
 <h4>Datos Personales</h4>
@@ -65,6 +69,7 @@
 <p>La Compañía puede utilizar los Datos Personales para los siguientes fines:</p>
 <ul>
 <li>
+<p>En el caso de la funcionalidad de búsqueda por placa, esta se utiliza exclusivamente para mostrar al usuario los resultados de su consulta en tiempo real, sin almacenarlos, transferirlos ni analizarlos fuera de su dispositivo. No se crea perfil de usuario ni se retienen historiales.</p>
 <p><strong>Para proporcionar y mantener nuestro Servicio</strong>, incluyendo el monitoreo del uso de nuestro Servicio.</p>
 </li>
 <li>
@@ -91,6 +96,7 @@
 </ul>
 <p>Podemos compartir Su información personal en las siguientes situaciones:</p>
 <ul>
+<p>En lo que respecta a los datos ingresados (como el número de placa), la aplicación no comparte ni transfiere esta información a ningún tercero. Todas las consultas se realizan directamente en el dispositivo del usuario mediante el uso de enlaces a portales oficiales.</p>
 <li><strong>Con Proveedores de Servicios:</strong> Podemos compartir Su información personal con Proveedores de Servicios para monitorear y analizar el uso de nuestro Servicio, o para contactarlo.</li>
 <li><strong>Para transferencias comerciales:</strong> Podemos compartir o transferir Su información personal en relación con, o durante las negociaciones de, cualquier fusión, venta de activos de la Compañía, financiación o adquisición de la totalidad o parte de Nuestro negocio por otra empresa.</li>
 <li><strong>Con Afiliados:</strong> Podemos compartir Su información con Nuestros afiliados, en cuyo caso les exigiremos que respeten esta Política de Privacidad. Los afiliados incluyen nuestra empresa matriz y cualquier otra subsidiaria, socios en empresas conjuntas u otras empresas que controlemos o que estén bajo control común con Nosotros.</li>
@@ -101,6 +107,8 @@
 <h3>Retención de Sus Datos Personales</h3>
 <p>La Compañía conservará Sus Datos Personales solo durante el tiempo que sea necesario para los fines establecidos en esta Política de Privacidad. Conservaremos y utilizaremos Sus Datos Personales en la medida necesaria para cumplir con nuestras obligaciones legales (por ejemplo, si se nos requiere conservar sus datos para cumplir con las leyes aplicables), resolver disputas y hacer cumplir nuestros acuerdos y políticas legales.</p>
 <p>La Compañía también conservará los Datos de Uso con fines de análisis interno. Los Datos de Uso generalmente se conservan por un período de tiempo más corto, excepto cuando estos datos se utilizan para fortalecer la seguridad o mejorar la funcionalidad de Nuestro Servicio, o cuando estemos legalmente obligados a conservar estos datos por períodos de tiempo más prolongados.</p>
+<p>La información ingresada por el usuario (número de placa) no se almacena ni se conserva de ninguna forma. Esta información se utiliza únicamente durante el momento de la consulta y se descarta inmediatamente después.</p>
+
 <h3>Transferencia de Sus Datos Personales</h3>
 <p>Su información, incluidos los Datos Personales, se procesa en las oficinas operativas de la Compañía y en cualquier otro lugar donde se encuentren las partes involucradas en dicho procesamiento. Esto significa que esta información puede ser transferida a — y mantenida en — computadoras ubicadas fuera de su estado, provincia, país u otra jurisdicción gubernamental donde las leyes de protección de datos puedan diferir de las de su jurisdicción.</p>
 <p>Su consentimiento a esta Política de Privacidad, seguido del envío de dicha información, representa su aceptación a esa transferencia.</p>
@@ -126,6 +134,7 @@
 </ul>
 <h3>Seguridad de Sus Datos Personales</h3>
 <p>La seguridad de Sus Datos Personales es importante para Nosotros, pero recuerde que ningún método de transmisión por Internet ni ningún método de almacenamiento electrónico es 100% seguro. Aunque Nos esforzamos por utilizar medios comercialmente aceptables para proteger Sus Datos Personales, no podemos garantizar su seguridad absoluta.</p>
+<p>Nuestro sistema utiliza conexiones HTTPS seguras para todas las solicitudes y no implementa bases de datos locales ni remotas para almacenar datos ingresados por el usuario.</p>
 <h2>Privacidad de los Niños</h2>
 <p>Nuestro Servicio no está dirigido a menores de 13 años. No recopilamos conscientemente información personal identificable de nadie menor de 13 años. Si Usted es padre, madre o tutor y sabe que su hijo nos ha proporcionado Datos Personales, contáctenos. Si nos damos cuenta de que hemos recopilado Datos Personales de un menor de 13 años sin verificación del consentimiento parental, tomaremos medidas para eliminar esa información de Nuestros servidores.</p>
 <p>Si necesitamos basarnos en el consentimiento como base legal para procesar Su información y Su país requiere el consentimiento de uno de los padres, podemos requerir dicho consentimiento antes de recopilar y usar esa información.</p>
@@ -140,5 +149,8 @@
 <h2>Contáctenos</h2>
 <p>Si tiene alguna pregunta sobre esta Política de Privacidad, puede contactarnos:</p>
 <ul>
-<li>Por correo electrónico: contacto.dgin@gmail.com</li>
+<p><strong>Desarrollador:</strong> D’GIN</p>
+<p><strong>Contacto: </strong> contacto.dgin@gmail.com</p>
+<p>Para ejercer sus derechos de acceso, rectificación o eliminación de datos personales, puede escribirnos al correo indicado abajo.</p>
+
 </ul>
