--- a/politica.html
+++ b/politica.html
@@ -1,5 +1,8 @@
 <h1>Privacy Policy</h1>
 <p>Last updated: June 08, 2025</p>
+<div style="background-color: #fff3cd; color: #856404; padding: 12px; border: 1px solid #ffeeba; margin-bottom: 20px; font-size: 14px;">
+⚠️ Disclaimer: This application <em>is not affiliated with</em>, <em>authorized by</em>, or <em>representative of</em> SUNARP, MTC, SAT, or any other Peruvian government agency. The information provided is obtained from publicly accessible official websites.
+</div>
 <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
 <p>We use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy. This Privacy Policy has been created with the help of the <a href="https://www.privacypolicies.com/privacy-policy-generator/" target="_blank">Privacy Policy Generator</a>.</p>
 <h2>Interpretation and Definitions</h2>
@@ -44,6 +47,8 @@
 </ul>
 <h2>Collecting and Using Your Personal Data</h2>
 <h3>Information Collected via License Plate Input</h3>
+<p>The D’GIN application does not collect, store, or process personal information such as names, national ID numbers (DNI), or addresses. Only a vehicle license plate number can be entered to retrieve public data already available on official websites.</p>
+
 <p>Our Application allows users to enter a vehicle license plate number in order to retrieve publicly available information from official websites. This data is processed in real time and is not stored, retained, or shared by us in any form.</p>
 <h3>Types of Data Collected</h3>
 <h4>Personal Data</h4>
@@ -58,13 +63,16 @@
 </ul>
 <h4>Usage Data</h4>
 <p>Usage Data is collected automatically when using the Service.</p>
-<p>Usage Data may include information such as Your Device's Internet Protocol address (e.g. IP address), browser type, browser version, the pages of our Service that You visit, the time and date of Your visit, the time spent on those pages, unique device identifiers and other diagnostic data.</p>
+<p>Usage Data may include information such as Your Device's Internet Protocol address (e.g., IP address), browser type, browser version, the pages of our Service that You visit, the time and date of Your visit, the time spent on those pages, unique device identifiers and other diagnostic data.</p>
 <p>When You access the Service by or through a mobile device, We may collect certain information automatically, including, but not limited to, the type of mobile device You use, Your mobile device unique ID, the IP address of Your mobile device, Your mobile operating system, the type of mobile Internet browser You use, unique device identifiers and other diagnostic data.</p>
 <p>We may also collect information that Your browser sends whenever You visit our Service or when You access the Service by or through a mobile device.</p>
 <h3>Use of Your Personal Data</h3>
 <p>The Company may use Personal Data for the following purposes:</p>
 <ul>
 <li>
+<p><strong>License plate search:</strong> This feature is used solely to display the user’s query results in real time... </p>
+</li>
+
 <p><strong>To provide and maintain our Service</strong>, including to monitor the usage of our Service.</p>
 </li>
 <li>
@@ -77,7 +85,7 @@
 <p><strong>To contact You:</strong> To contact You by email, telephone calls, SMS, or other equivalent forms of electronic communication, such as a mobile application's push notifications regarding updates or informative communications related to the functionalities, products or contracted services, including the security updates, when necessary or reasonable for their implementation.</p>
 </li>
 <li>
-<p><strong>To provide You</strong> with news, special offers and general information about other goods, services and events which we offer that are similar to those that you have already purchased or enquired about unless You have opted not to receive such information.</p>
+<p><strong>To provide You with:</strong> with news, special offers and general information about other goods, services and events which we offer that are similar to those that you have already purchased or enquired about unless You have opted not to receive such information.</p>
 </li>
 <li>
 <p><strong>To manage Your requests:</strong> To attend and manage Your requests to Us.</p>
@@ -91,6 +99,8 @@
 </ul>
 <p>We may share Your personal information in the following situations:</p>
 <ul>
+<p>With regard to the data entered (such as the license plate number), the application does not share or transfer this information to any third party. All queries are performed directly on the user's device using links to official websites.</p>
+  
 <li><strong>With Service Providers:</strong> We may share Your personal information with Service Providers to monitor and analyze the use of our Service,  to contact You.</li>
 <li><strong>For business transfers:</strong> We may share or transfer Your personal information in connection with, or during negotiations of, any merger, sale of Company assets, financing, or acquisition of all or a portion of Our business to another company.</li>
 <li><strong>With Affiliates:</strong> We may share Your information with Our affiliates, in which case we will require those affiliates to honor this Privacy Policy. Affiliates include Our parent company and any other subsidiaries, joint venture partners or other companies that We control or that are under common control with Us.</li>
@@ -101,6 +111,8 @@
 <h3>Retention of Your Personal Data</h3>
 <p>The Company will retain Your Personal Data only for as long as is necessary for the purposes set out in this Privacy Policy. We will retain and use Your Personal Data to the extent necessary to comply with our legal obligations (for example, if we are required to retain your data to comply with applicable laws), resolve disputes, and enforce our legal agreements and policies.</p>
 <p>The Company will also retain Usage Data for internal analysis purposes. Usage Data is generally retained for a shorter period of time, except when this data is used to strengthen the security or to improve the functionality of Our Service, or We are legally obligated to retain this data for longer time periods.</p>
+<p>The information entered by the user (license plate number) is not stored or retained in any way. This information is used solely at the time of the query and is immediately discarded afterward.</p>
+
 <h3>Transfer of Your Personal Data</h3>
 <p>Your information, including Personal Data, is processed at the Company's operating offices and in any other places where the parties involved in the processing are located. It means that this information may be transferred to — and maintained on — computers located outside of Your state, province, country or other governmental jurisdiction where the data protection laws may differ than those from Your jurisdiction.</p>
 <p>Your consent to this Privacy Policy followed by Your submission of such information represents Your agreement to that transfer.</p>
@@ -125,6 +137,7 @@
 <li>Protect against legal liability</li>
 </ul>
 <h3>Security of Your Personal Data</h3>
+<p>Our system uses secure HTTPS connections for all requests and does not implement local or remote databases to store user-entered data.</p>
 <p>The security of Your Personal Data is important to Us, but remember that no method of transmission over the Internet, or method of electronic storage is 100% secure. While We strive to use commercially acceptable means to protect Your Personal Data, We cannot guarantee its absolute security.</p>
 <h2>Children's Privacy</h2>
 <p>Our Service does not address anyone under the age of 13. We do not knowingly collect personally identifiable information from anyone under the age of 13. If You are a parent or guardian and You are aware that Your child has provided Us with Personal Data, please contact Us. If We become aware that We have collected Personal Data from anyone under the age of 13 without verification of parental consent, We take steps to remove that information from Our servers.</p>
@@ -140,7 +153,10 @@
 <h2>Contact Us</h2>
 <p>If you have any questions about this Privacy Policy, You can contact us:</p>
 <ul>
-<li>By email: contacto.dgin@gmail.com</li>
+<p><strong>Developer:</strong> D’GIN</p>
+<p><strong>By Email: </strong> contacto.dgin@gmail.com</p>
+<p>To exercise your rights of access, rectification, or deletion of personal data, you may contact us at the email address provided below.</p>
+
 </ul>
 
 
