--- a/politica-es.html
+++ b/politica-es.html
@@ -1,10 +1,10 @@
 <h1>Política de Privacidad</h1>
 <p>Última actualización: 09 de junio de 2025</p>
 <div style="background-color: #fff3cd; color: #856404; padding: 12px; border: 1px solid #ffeeba; margin-bottom: 20px; font-size: 14px;">
-  ⚠️ Atención: esta aplicación <em>no representa</em>, <em>no está afiliada</em> y <em>no ha sido autorizada</em> por SUNARP, MTC, SAT ni ninguna otra entidad pública peruana. La información consultada se obtiene de portales oficiales de acceso público.
+  Atención: esta aplicación <em>no representa</em>, <em>no está afiliada</em> y <em>no ha sido autorizada</em> por SUNARP, MTC, SAT ni ninguna otra entidad pública peruana. La información consultada se obtiene de portales oficiales de acceso público.
 </div>
 <p>Esta Política de Privacidad describe nuestras políticas y procedimientos sobre la recopilación, uso y divulgación de su información cuando utiliza el Servicio, y le informa sobre sus derechos de privacidad y cómo la ley lo protege.</p>
-<p>Utilizamos sus datos personales para proporcionar y mejorar el Servicio. Al utilizar el Servicio, usted acepta la recopilación y el uso de información de acuerdo con esta Política de Privacidad. Esta Política de Privacidad ha sido creada con la ayuda de <a href="https://www.privacypolicies.com/privacy-policy-generator/" target="_blank">Privacy Policy Generator</a>.</p>
+<p>Utilizamos sus datos personales para proporcionar y mejorar el Servicio. Al utilizar el Servicio, usted acepta la recopilación y el uso de información de acuerdo con esta Política de Privacidad.</a>.</p>
 <h2>Interpretación y Definiciones</h2>
 <h3>Interpretación</h3>
 <p>Las palabras cuya primera letra está en mayúscula tienen significados definidos bajo las siguientes condiciones. Las siguientes definiciones tendrán el mismo significado independientemente de si aparecen en singular o en plural.</p>
@@ -21,7 +21,7 @@
 <p><strong>Aplicación</strong> se refiere a D'GIN: Consulta Vehicular Perú, el programa de software proporcionado por la Compañía.</p>
 </li>
 <li>
-<p><strong>Compañía</strong> (denominada como “la Compañía”, “Nosotros”, “Nos” o “Nuestro” en este Acuerdo) se refiere a D'GIN: Consulta Vehicular Perú.</p>
+<p><strong>Compañía</strong> (denominada como “la Compañía”, “nosotros”, “nos” o “nuestro” en este Acuerdo)...</p>
 </li>
 <li>
 <p><strong>País</strong> se refiere a: Perú</p>
@@ -51,7 +51,7 @@
 <p>Nuestra Aplicación permite a los usuarios ingresar el número de placa de un vehículo para recuperar información disponible públicamente desde sitios web oficiales. Estos datos se procesan en tiempo real y no se almacenan, conservan ni comparten de ninguna forma.</p>
 <h3>Tipos de Datos Recopilados</h3>
 <h4>Datos Personales</h4>
-<p>Mientras utiliza Nuestro Servicio, podemos pedirle que nos proporcione cierta información personal identificable que puede ser utilizada para contactarlo o identificarlo. La información personal identificable puede incluir, entre otros:</p>
+<p>Mientras utiliza nuestro Servicio, podemos pedirle que nos proporcione cierta información personal identificable que puede ser utilizada para contactarlo o identificarlo. La información personal identificable puede incluir, entre otros:</p>
 <ul>
 <li>
 <p>Dirección de correo electrónico</p>
@@ -76,7 +76,7 @@
 <p><strong>Para gestionar Su Cuenta:</strong> para gestionar Su registro como usuario del Servicio. Los Datos Personales que proporcione pueden darle acceso a diferentes funcionalidades del Servicio que están disponibles para Usted como usuario registrado.</p>
 </li>
 <li>
-<p><strong>Para la ejecución de un contrato:</strong> el desarrollo, cumplimiento y ejecución del contrato de compra de productos, artículos o servicios que Usted haya adquirido o de cualquier otro contrato con Nosotros a través del Servicio.</p>
+<p><strong>Para la ejecución de un contrato:</strong> el desarrollo, cumplimiento y ejecución del contrato de compra de productos, artículos o servicios que Usted haya adquirido o de cualquier otro contrato con nosotros a través del Servicio.</p>
 </li>
 <li>
 <p><strong>Para contactarlo:</strong> Para contactarlo por correo electrónico, llamadas telefónicas, SMS u otras formas equivalentes de comunicación electrónica, como las notificaciones push de una aplicación móvil relacionadas con actualizaciones o comunicaciones informativas sobre las funcionalidades, productos o servicios contratados, incluidas las actualizaciones de seguridad, cuando sea necesario o razonable para su implementación.</p>
@@ -85,10 +85,10 @@
 <p><strong>Para ofrecerle</strong> noticias, ofertas especiales e información general sobre otros bienes, servicios y eventos que ofrecemos y que son similares a los que ya haya adquirido o sobre los que haya consultado, a menos que haya optado por no recibir dicha información.</p>
 </li>
 <li>
-<p><strong>Para gestionar Sus solicitudes:</strong> Para atender y gestionar Sus solicitudes dirigidas a Nosotros.</p>
+<p><strong>Para gestionar Sus solicitudes:</strong> Para atender y gestionar Sus solicitudes dirigidas a nosotros.</p>
 </li>
 <li>
-<p><strong>Para transferencias comerciales:</strong> Podemos utilizar Su información para evaluar o llevar a cabo una fusión, escisión, reestructuración, reorganización, disolución u otra venta o transferencia de la totalidad o parte de Nuestros activos, ya sea como empresa en funcionamiento o como parte de una quiebra, liquidación o procedimiento similar, en el cual los Datos Personales en poder de Nosotros sobre los usuarios de nuestro Servicio se encuentren entre los activos transferidos.</p>
+<p><strong>Para transferencias comerciales:</strong> Aunque actualmente no realizamos transferencias comerciales, nos reservamos el derecho de hacerlo en el futuro bajo los términos legales correspondientes. Su información nunca será transferida sin previo aviso y consentimiento explícito.</p>
 </li>
 <li>
 <p><strong>Para otros fines:</strong> Podemos utilizar Su información para otros fines, como análisis de datos, identificación de tendencias de uso, evaluación de la efectividad de nuestras campañas promocionales y para evaluar y mejorar nuestro Servicio, productos, servicios, marketing y Su experiencia.</p>
@@ -98,15 +98,15 @@
 <ul>
 <p>En lo que respecta a los datos ingresados (como el número de placa), la aplicación no comparte ni transfiere esta información a ningún tercero. Todas las consultas se realizan directamente en el dispositivo del usuario mediante el uso de enlaces a portales oficiales.</p>
 <li><strong>Con Proveedores de Servicios:</strong> Podemos compartir Su información personal con Proveedores de Servicios para monitorear y analizar el uso de nuestro Servicio, o para contactarlo.</li>
-<li><strong>Para transferencias comerciales:</strong> Podemos compartir o transferir Su información personal en relación con, o durante las negociaciones de, cualquier fusión, venta de activos de la Compañía, financiación o adquisición de la totalidad o parte de Nuestro negocio por otra empresa.</li>
-<li><strong>Con Afiliados:</strong> Podemos compartir Su información con Nuestros afiliados, en cuyo caso les exigiremos que respeten esta Política de Privacidad. Los afiliados incluyen nuestra empresa matriz y cualquier otra subsidiaria, socios en empresas conjuntas u otras empresas que controlemos o que estén bajo control común con Nosotros.</li>
-<li><strong>Con socios comerciales:</strong> Podemos compartir Su información con Nuestros socios comerciales para ofrecerle ciertos productos, servicios o promociones.</li>
+<li><strong>Para transferencias comerciales:</strong> Aunque actualmente no realizamos transferencias comerciales, nos reservamos el derecho de hacerlo en el futuro bajo los términos legales correspondientes. Su información nunca será transferida sin previo aviso y consentimiento explícito.</li>
+<li><strong>Con Afiliados:</strong> Podemos compartir Su información con nuestros afiliados, en cuyo caso les exigiremos que respeten esta Política de Privacidad. Los afiliados incluyen nuestra empresa matriz y cualquier otra subsidiaria, socios en empresas conjuntas u otras empresas que controlemos o que estén bajo control común con nosotros.</li>
+<li><strong>Con socios comerciales:</strong> Podemos compartir Su información con nuestros socios comerciales para ofrecerle ciertos productos, servicios o promociones.</li>
 <li><strong>Con otros usuarios:</strong> cuando Usted comparte información personal o interactúa de otro modo en las áreas públicas con otros usuarios, dicha información puede ser vista por todos los usuarios y puede ser distribuida públicamente fuera de la aplicación.</li>
 <li><strong>Con Su consentimiento:</strong> Podemos divulgar Su información personal para cualquier otro propósito con Su consentimiento.</li>
 </ul>
 <h3>Retención de Sus Datos Personales</h3>
 <p>La Compañía conservará Sus Datos Personales solo durante el tiempo que sea necesario para los fines establecidos en esta Política de Privacidad. Conservaremos y utilizaremos Sus Datos Personales en la medida necesaria para cumplir con nuestras obligaciones legales (por ejemplo, si se nos requiere conservar sus datos para cumplir con las leyes aplicables), resolver disputas y hacer cumplir nuestros acuerdos y políticas legales.</p>
-<p>La Compañía también conservará los Datos de Uso con fines de análisis interno. Los Datos de Uso generalmente se conservan por un período de tiempo más corto, excepto cuando estos datos se utilizan para fortalecer la seguridad o mejorar la funcionalidad de Nuestro Servicio, o cuando estemos legalmente obligados a conservar estos datos por períodos de tiempo más prolongados.</p>
+<p>La Compañía también conservará los Datos de Uso con fines de análisis interno. Los Datos de Uso generalmente se conservan por un período de tiempo más corto, excepto cuando estos datos se utilizan para fortalecer la seguridad o mejorar la funcionalidad de nuestro Servicio, o cuando estemos legalmente obligados a conservar estos datos por períodos de tiempo más prolongados.</p>
 <p>La información ingresada por el usuario (número de placa) no se almacena ni se conserva de ninguna forma. Esta información se utiliza únicamente durante el momento de la consulta y se descarta inmediatamente después.</p>
 
 <h3>Transferencia de Sus Datos Personales</h3>
@@ -115,7 +115,7 @@
 <p>La Compañía tomará todas las medidas razonablemente necesarias para garantizar que sus datos sean tratados de forma segura y de acuerdo con esta Política de Privacidad y no se realizará ninguna transferencia de Sus Datos Personales a ninguna organización o país a menos que existan controles adecuados establecidos, incluida la seguridad de sus datos y otra información personal.</p>
 <h3>Eliminar Sus Datos Personales</h3>
 <p>Usted tiene derecho a eliminar o solicitar que le ayudemos a eliminar los Datos Personales que hemos recopilado sobre Usted.</p>
-<p>Es posible que Nuestro Servicio le permita eliminar cierta información sobre Usted desde dentro del propio Servicio.</p>
+<p>Es posible que nuestro Servicio le permita eliminar cierta información sobre Usted desde dentro del propio Servicio.</p>
 <p>Puede actualizar, modificar o eliminar Su información en cualquier momento iniciando sesión en Su Cuenta, si tiene una, y visitando la sección de configuración de la cuenta que le permite gestionar Su información personal. También puede contactarnos para solicitar acceso, corrección o eliminación de cualquier información personal que nos haya proporcionado.</p>
 <p>Sin embargo, tenga en cuenta que es posible que necesitemos conservar cierta información cuando tengamos una obligación legal o una base legítima para hacerlo.</p>
 <h3>Divulgación de Sus Datos Personales</h3>
@@ -133,19 +133,19 @@
 <li>Protegerse contra responsabilidades legales</li>
 </ul>
 <h3>Seguridad de Sus Datos Personales</h3>
-<p>La seguridad de Sus Datos Personales es importante para Nosotros, pero recuerde que ningún método de transmisión por Internet ni ningún método de almacenamiento electrónico es 100% seguro. Aunque Nos esforzamos por utilizar medios comercialmente aceptables para proteger Sus Datos Personales, no podemos garantizar su seguridad absoluta.</p>
-<p>Nuestro sistema utiliza conexiones HTTPS seguras para todas las solicitudes y no implementa bases de datos locales ni remotas para almacenar datos ingresados por el usuario.</p>
+<p>La seguridad de Sus Datos Personales es importante para nosotros, pero recuerde que ningún método de transmisión por Internet ni ningún método de almacenamiento electrónico es 100% seguro. Aunque Nos esforzamos por utilizar medios comercialmente aceptables para proteger Sus Datos Personales, no podemos garantizar su seguridad absoluta.</p>
+<p>nuestro sistema utiliza conexiones HTTPS seguras para todas las solicitudes y no implementa bases de datos locales ni remotas para almacenar datos ingresados por el usuario.</p>
 <h2>Privacidad de los Niños</h2>
-<p>Nuestro Servicio no está dirigido a menores de 13 años. No recopilamos conscientemente información personal identificable de nadie menor de 13 años. Si Usted es padre, madre o tutor y sabe que su hijo nos ha proporcionado Datos Personales, contáctenos. Si nos damos cuenta de que hemos recopilado Datos Personales de un menor de 13 años sin verificación del consentimiento parental, tomaremos medidas para eliminar esa información de Nuestros servidores.</p>
+<p>nuestro Servicio no está dirigido a menores de 13 años. No recopilamos conscientemente información personal identificable de nadie menor de 13 años. Si Usted es padre, madre o tutor y sabe que su hijo nos ha proporcionado Datos Personales, contáctenos. Si nos damos cuenta de que hemos recopilado Datos Personales de un menor de 13 años sin verificación del consentimiento parental, tomaremos medidas para eliminar esa información de nuestros servidores.</p>
 <p>Si necesitamos basarnos en el consentimiento como base legal para procesar Su información y Su país requiere el consentimiento de uno de los padres, podemos requerir dicho consentimiento antes de recopilar y usar esa información.</p>
 <h2>Enlaces a Otros Sitios Web</h2>
-<p>Nuestro Servicio puede contener enlaces a otros sitios web que no son operados por Nosotros. Si hace clic en un enlace de terceros, será dirigido al sitio de ese tercero. Le recomendamos encarecidamente que revise la Política de Privacidad de cada sitio que visite.</p>
+<p>nuestro Servicio puede contener enlaces a otros sitios web que no son operados por nosotros. Si hace clic en un enlace de terceros, será dirigido al sitio de ese tercero. Le recomendamos encarecidamente que revise la Política de Privacidad de cada sitio que visite.</p>
 <p>No tenemos control ni asumimos responsabilidad alguna por el contenido, las políticas de privacidad o las prácticas de sitios o servicios de terceros.</p>
 <h2>Cambios en esta Política de Privacidad</h2>
 <p>Podemos actualizar Nuestra Política de Privacidad periódicamente. Le notificaremos cualquier cambio publicando la nueva Política de Privacidad en esta página.</p>
-<p>Le informaremos por correo electrónico y/o mediante un aviso destacado en Nuestro Servicio antes de que el cambio entre en vigor, y actualizaremos la fecha de “Última actualización” en la parte superior de esta Política de Privacidad.</p>
+<p>Le informaremos por correo electrónico y/o mediante un aviso destacado en nuestro Servicio antes de que el cambio entre en vigor, y actualizaremos la fecha de “Última actualización” en la parte superior de esta Política de Privacidad.</p>
 <p>Se le recomienda revisar esta Política de Privacidad periódicamente para estar al tanto de cualquier cambio. Los cambios en esta Política de Privacidad entran en vigencia cuando se publican en esta página.</p>
-<p><strong>Descargo de responsabilidad:</strong> Esta aplicación no está afiliada ni cuenta con el respaldo de ninguna entidad gubernamental en Perú. Todos los datos se obtienen de fuentes oficiales de acceso público.</p>
+<p><em>Nota legal: Esta política de privacidad es referencial. Toda la información mostrada por la app es pública, proviene de portales oficiales y no implica afiliación con entidades del Estado peruano.</em></p>
 <h2>Contáctenos</h2>
 <p>Si tiene alguna pregunta sobre esta Política de Privacidad, puede contactarnos:</p>
 <ul>
